--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,9 @@ jobs:
     
     - name: Build
       run: |
-        ./scripts/setup.sh
-        ./scripts/run.sh build
+        sh scripts/setup.sh
+        sh scripts/run.sh build
 
     - name: Clean
       run: |
-        ./scripts/run.sh clean
+        sh scripts/run.sh clean
